<resources>
    <string name="app_name">VenderHQ</string>

 <string name="title_sing_in">SIGN IN.</string>
    <string name="company">Company</string>
    <string name="user_name">User name</string>
    <string name="password">Password</string>
    <string name="btn_sign_in">SIGN IN</string>
    <string name="sign_in_trouble">Having trouble in sign in?</string>
    <string name="dont_have_account">Dont have an account?</string>
    <string name="try_vend"><u>Try vend for free</u></string>
    <string name="reset_local_data">We keep a copy of some of your store data in your web browser so you can keep selling if you lose your internet connection.\nSometimes, this gets out of syn. Resetting it can help if you\'re having trouble with Vend.</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_products">Products</string>
    <string name="btn_import">Import</string>
    <string name="reset_data_title">Reset local data</string>
    <string name="btn_reset_data">Reset Data</string>
    <string name="stock_keeping">Stock keeping unit (SKU)</string>
    <string name="varient_product">Varient Product</string>
    <string name="varient_product_desc">These are product that have different vesrsion, like size or color. Turn this on to specify upto three attribute like (color) and unlimited values for each attribute  like (green, blue, black)</string>
    <string name="varient_product_has">These product has varient</string>
    <string name="cancel">Cancel</string>
    <string name="all">All</string>
    <string name="product_short_name">Product short name</string>
    <string name="set_main_image">Set Main Image</string>
    <string name="upload_from_gallary">Upload from Galary</string>
    <string name="string_product_sold">This product can be sold</string>
    <string name="description">Description</string>
    <string name="product_tags">Product tags</string>
    <string name="add">+ Add</string>
    <string name="product_type">Product type</string>
    <string name="product_brand">Product Brand</string>
    <string name="supplier">Supplier</string>
    <string name="supplier_code">Supplier Code</string>
    <string name="sales_account_code">Sales Account Code</string>
    <string name="in_house">Im house</string>
    <string name="purchase_account_code">Purchase account code</string>
    <string name="salestax">Sales Tax</string>
    <string name="tax_amount">Tax Amount</string>
    <string name="retailprise">Retail Prise</string>
    <string name="currenltnotax">Currently no tax (0%)</string>
    <string name="mainoutlet">Main outlet</string>
    <string name="btn_apply">Apply Filter</string>

    <string name="btn_remove_cash">Remove Cash</string>
    <string name="btn_more_filter">More Filter</string>
    <string name="btn_more_option">More Options</string>
    <string name="btn_add_cash">Add Cash</string>
    <string name="btn_add_product">Add Products</string>
    <string name="btn_add_supplier">Add Supplier</string>
    <string name="btn_add_product_tags">Add Tags</string>
    <string name="btn_add_product_type">Add Type</string>
    <string name="btn_add_pricebook">Add Price Book</string>
    <string name="btn_add_brand">Add Brand</string>
    <string name="product_screen_header">Add, view and edit your product all in one place. <u>Need Help?</u></string>
    <string name="brand_screen_header">A list of all your brands,  <u>Need Help?</u></string>
    <string name="supplier_screen_header">View and manage your suppliers,  <u>Need Help?</u></string>
    <string name="product_types_header">A list of all your product types,  <u>Need Help?</u></string>
    <string name="product_tags_header">A list of all your product tags,  <u>Need Help?</u></string>
    <string name="brand_price_book_header">A list of all your price books,  <u>Need Help?</u></string>
    <string name="cash_screen_header">Remove your cash movements for the day.<u>Need Help?</u></string>
    <string name="register">Register</string>
    <string name="product_display_name">Product display name</string>

    <string name="register_details">Register Details</string>
    <string name="outlet">Outlet</string>
    <string name="main_outlet">Main Outlet</string>
    <string name="main_register">Main register</string>
    <string name="closure">Closure # \n 3</string>
    <!--<string name="three">3</string>-->
    <string name="opening_time">Opening time</string>
    <string name="time">Thu, 12 Oct. 2017, 08:07PM</string>
    <string name="payment_type">Payment Type</string>
    <string name="expected">Expected(Rp)</string>
    <string name="counted">Counted(Rp)</string>
    <string name="difference">Differences(Rp)</string>
    <string name="expected_rp">Expected (RP)</string>
    <string name="cunted_rp">Counted (RP)</string>
    <string name="difference_rp">Difference (RP)</string>
    <string name="cash">Cash</string>
    <string name="credit">Credit Card</string>

    <string name="icon_rightArrow"></string>
    <string name="icon_delete"></string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="share_credit">Share Credit</string>
    <string name="total">Total</string>
    <string name="cash_payment">View cash payments, Float, Movements</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="cash_movements">Cash Movements</string>
    <string name="time_text">Time</string>
    <string name="user">User</string>
    <string name="amount">Amount (RP)</string>
    <string name="reason">Reason</string>
    <string name="manager">Manager</string>
    <string name="opeming_flate">Openign flate</string>
    <string name="cash_payment_received">Cash Payment received</string>
    <string name="credit_card">Credit Card</string>
    <string-array name="left">
        <item name="1">1</item>
        <item name="2">2</item>
        <item name="3">3</item>
    </string-array>


    <string-array name="right1">
        <item name="1*1">Sales Screen</item>
        <item name="1*2">Sales History</item>
        <item name="1*3">Cash Management</item>
        <item name="1*4">Close Register</item>
        <item name="1*5">Dashboard</item>
        <item name="1*6">Settings</item>
    </string-array>


    <string-array name="right2">
        <item name="2*1">2*1</item>
        <item name="2*2">2*2</item>
        <item name="2*3">2*3</item>
        <item name="2*4">2*4</item>
        <item name="2*5">2*5</item>
        <item name="2*6">2*6</item>
        <item name="2*7">2*7</item>
        <item name="2*8">2*8</item>
        <item name="2*9">2*9</item>
    </string-array>


    <string-array name="right3">
        <item name="3*1">3*1</item>
        <item name="3*2">3*2</item>
        <item name="3*3">3*3</item>
        <item name="3*4">3*4</item>
        <item name="3*5">3*5</item>
        <item name="3*6">3*6</item>
        <item name="3*7">3*7</item>
        <item name="3*8">3*8</item>
        <item name="3*9">3*9</item>
    </string-array>
    <string-array name="spinner_array">
        <item>All</item>
        <item>Choice 1</item>
        <item>Choice 2</item>
        <item>Choice 3</item>
        <item>Choice 4</item>
    </string-array>

<!--
    key section
-->
    <string name="str_key_username">username</string>
    <string name="str_key_password">password</string>
    <string name="str_key_storename">storename</string>
    <string name="str_key_storeid">storeid</string>
    <string name="str_key_store_id">store_id</string>
    <string name="str_key_productid">productid</string>
    <string name="str_key_categoryid">categoryid</string>

    <string name="str_key_userId">UserId</string>
    <string name="str_key_stockName">StockName</string>
    <string name="str_key_deliveryDue">DeliveryDue</string>
    <string name="str_key_orderFrom">OrderFrom</string>
    <string name="str_key_orderNo">OrderNo</string>
    <string name="str_key_deliverTo">DeliverTo</string>
    <string name="str_key_supplierInvoice">SupplierInvoice</string>
    <string name="str_key_autoFill">AutoFill</string>


    <string name="str_key_supliername">SupplierName</string>
    <string name="str_key_markup">MarkUp</string>
    <string name="str_key_description">Description</string>
    <string name="str_key_firstname">FirstName</string>
    <string name="str_key_lastname">LastName</string>
    <string name="str_key_company">Company</string>
    <string name="str_key_email">Email</string>
    <string name="str_key_phone">Phone</string>
    <string name="str_key_mobile">Mobile</string>
    <string name="str_key_fax">Fax</string>
    <string name="str_key_website">Website</string>
    <string name="str_key_twitter">Twitter</string>
    <string name="str_key_street1">Street1</string>
    <string name="str_key_street2">Street2</string>
    <string name="str_key_suburb">Suburb</string>
    <string name="str_key_state">state</string>
    <string name="str_key_postcode">postcode</string>
    <string name="str_key_country">country</string>
    <string name="str_key_ispostaladdress">IsPostalAddress</string>


    <string name="delay_ind_retrieving_data">Retriving Data</string>
    <!--<string name="str_key_username">username</string>-->

    username
</resources>
