<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/side_margin"
            android:layout_marginRight="@dimen/side_margin"
            android:layout_marginTop="@dimen/side_margin">

            <LinearLayout
                android:id="@+id/linear_first"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        style="@style/normalTextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/product_display_name" />

                    <EditText
                        android:layout_width="150dp"
                        android:layout_height="40dp"
                        android:background="@drawable/corner_stroke"

                        android:hint="@string/all"
                        android:padding="10dp" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        style="@style/normalTextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/product_short_name" />

                    <EditText
                        android:layout_width="150dp"

                        android:layout_height="40dp"
                        android:background="@drawable/corner_stroke"
                        android:hint="@string/all"
                        android:padding="10dp" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        style="@style/normalTextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/set_main_image" />

                    <Button
                        style="@style/buttonNonSelectedStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:text="@string/upload_from_gallary" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_second"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/linear_first"
                android:orientation="horizontal"
                android:weightSum="3">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:orientation="vertical">

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:text="@string/string_product_sold" />

                    <TextView
                        style="@style/textViewStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/description" />

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="300dp"
                        android:layout_height="100dp"
                        android:background="@drawable/corner_stroke" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="200dp"
                        android:layout_height="150dp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_third"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/linear_second">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/textViewStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/product_tags" />

                    <TextView
                        android:layout_width="200dp"
                        android:layout_height="40dp"
                        android:background="@drawable/corner_stroke"
                        android:hint="@string/all"
                        android:padding="10dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="22dp"
                    android:orientation="vertical">

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/add" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_fourth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linear_third"
                android:orientation="horizontal"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/product_type" />

                    <Spinner
                        android:id="@+id/spinner"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"></Spinner>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/product_brand" />

                    <Spinner
                        android:layout_width="match_parent"
                        android:layout_height="40dp"></Spinner>
                </LinearLayout>


            </LinearLayout>


            <LinearLayout
                android:id="@+id/linear_fifth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linear_fourth"
                android:orientation="horizontal"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/supplier" />

                    <Spinner
                        android:id="@+id/spinner_supplier"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"></Spinner>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/supplier_code" />

                    <TextView
                        android:id="@+id/supplier_code"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"></TextView>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_sixth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linear_fifth"
                android:orientation="horizontal"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/sales_account_code" />

                    <TextView
                        android:layout_width="match_parent"

                        android:layout_height="40dp"
                        android:background="@drawable/corner_stroke"
                        android:padding="10dp"
                        android:text="@string/in_house"></TextView>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/purchase_account_code" />

                    <TextView
                        android:layout_width="match_parent"

                        android:layout_height="40dp"
                        android:background="@drawable/corner_stroke"
                        android:padding="10dp"
                        android:text="@string/purchase_account_code"></TextView>
                </LinearLayout>
            </LinearLayout>

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>