<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linear_first"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/side_margin"
        android:layout_marginRight="@dimen/side_margin"
        android:layout_marginTop="@dimen/side_margin"
        android:background="@color/colorFaintGray"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="170dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:background="@drawable/corner_stroke"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/expand_button" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="170dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:background="@drawable/corner_stroke"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/expand_button" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:id="@+id/view_first"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@+id/linear_first"
        android:background="@color/colorBlack"></View>

    <LinearLayout
        android:id="@+id/linear_second"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/linear_first"
        android:background="@color/colorFaintGray"
        android:orientation="vertical"
        android:paddingRight="30dp">

        <TextView
            style="@style/normalTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stock_keeping" />

        <EditText
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="@drawable/corner_stroke"
            android:gravity="center"
            android:text="1000" />

    </LinearLayout>
    <View
        android:id="@+id/view_second"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@+id/linear_second"
        android:background="@color/colorBlack"></View>


    <LinearLayout
        android:id="@+id/linear_third"
        android:weightSum="3"
        android:layout_below="@+id/view_second"
        android:background="@color/colorFaintGray"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_weight="2"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                style="@style/normalBoldTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/varient_product"
                />

            <TextView
                style="@style/textViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/varient_product_desc"
                />

        </LinearLayout>

        <LinearLayout
            android:gravity="center"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv_product_varient"
                style="@style/normalBoldTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/varient_product_has" />
            <Switch
                android:layout_width="50dp"
                android:layout_height="50dp" />
        </LinearLayout>

    </LinearLayout>

    <View
        android:id="@+id/view_third"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@+id/linear_third"
        android:background="@color/colorBlack"></View>
    <LinearLayout
        android:id="@+id/linear_fourth"
        android:layout_below="@+id/view_third"
        android:background="@color/soft_grey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_marginLeft="700dp"
            android:text="@string/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            style="style/buttonSelectedStyle"
            android:text="@string/btn_add_product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        </LinearLayout>


</RelativeLayout>