<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@color/colorProductBackground"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorTitleBackground"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp">

            <TextView
                style="@style/TitleTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/fragment_margin"
                android:paddingRight="@dimen/fragment_margin"
                android:text="@string/reset_data_title" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/side_button_margin"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="@dimen/side_button_margin">

            <TextView
                style="@style/normalTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/fragment_margin"
                android:paddingRight="@dimen/fragment_margin"
                android:text="@string/reset_local_data"
                android:textStyle="normal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:paddingBottom="@dimen/side_button_margin"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="@dimen/side_button_margin">

            <Button
                android:id="@+id/btnResetData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/title_margin"
                android:background="@drawable/rounded_orange_button"
                android:paddingLeft="@dimen/fragment_margin"
                android:paddingRight="@dimen/fragment_margin"
                android:text="@string/btn_reset_data"
                android:textColor="@color/whiteColor"
                android:textStyle="normal" />
        </LinearLayout>

    </LinearLayout>


</RelativeLayout>